# RL_Capstone

./: README.md  blob.py  demo_blob.py  dqn.py  dqn_practice.ipynb  figure.py  oct17_0445.ipynb  pyproject.toml  setup.sh  tetris.ipynb  tetris.py  tetris_RL.ipynb  tetris_environment.py
File_checkpoints/: Oct16_1900.ipynb  Untitled.ipynb  oct13_2300.ipynb  oct14_0300.ipynb  oct17_0445.ipynb
Old/: oct17_0445.ipynb
PracticeStuff/: dqn_2.ipynb  dqn_blob_maze.ipynb
logs/: events.out.tfevents.1666714334.Andrews-MacBook-Pro.local.86929.0.v2  events.out.tfevents.1666714343.Andrews-MacBook-Pro.local.86929.1.v2  events.out.tfevents.1666714363.Andrews-MacBook-Pro.local.86929.2.v2  events.out.tfevents.1666714605.Andrews-MacBook-Pro.local.86929.3.v2  events.out.tfevents.1666714607.Andrews-MacBook-Pro.local.86929.4.v2  events.out.tfevents.1666714622.Andrews-MacBook-Pro.local.86929.5.v2  events.out.tfevents.1666714747.Andrews-MacBook-Pro.local.86929.6.v2  events.out.tfevents.1666714937.Andrews-MacBook-Pro.local.86929.7.v2  events.out.tfevents.1666715348.Andrews-MacBook-Pro.local.86929.8.v2  events.out.tfevents.1666718474.Andrews-MacBook-Pro.local.87387.0.v2  events.out.tfevents.1666720382.Andrews-MacBook-Pro.local.87387.8.v2  events.out.tfevents.1666720402.Andrews-MacBook-Pro.local.87634.0.v2  events.out.tfevents.1666720708.Andrews-MacBook-Pro.local.87730.0.v2  events.out.tfevents.1666941826.Andrews-MBP.87730.3.v2  events.out.tfevents.1666941888.Andrews-MBP.87730.4.v2  events.out.tfevents.1666941898.Andrews-MBP.87730.5.v2
model_one/: keras_metadata.pb  saved_model.pb
(+235 files in other folders)
